--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/my_img.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/my_img.svg" />
+    <meta name="description" content="Ankit Gupta - Performance-oriented and user-centric Full Stack Developer with expertise in React.js, Node.js, and modern web technologies" />
+    <meta name="author" content="Ankit Gupta" />
+    <meta property="og:description" content="Performance-oriented and user-centric Full Stack Developer with expertise in React.js, Node.js, and modern web technologies" />
     <title>Ankit Gupta</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   </head>
   <body>
     <div id="root"></div>
